# ya-mono

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ya-agent-platform  Dockerfile.ya-claw  Dockerfile.ya-claw-workspace  Makefile  README.md  SKILL.md  pnpm-lock.yaml  pyproject.toml  pytest.ini
.github/workflows/: claw-image.yaml  cli-tests.yml  main.yml  on-release-main.yml  platform-image.yaml  platform-image.yml  ya-claw-workspace-image.yml
apps/ya-agent-platform-web/: README.md  index.html  package.json  tsconfig.json
apps/ya-claw-web/: README.md  index.html  package.json  vite.config.ts
docs/: README.md  environment.md  events.md  media.md  subagent.md  tool-proxy.md  tool-search.md  toolset.md  workspace.md
examples/: browser_use.py  general.py
scripts/: build-skill-zips.py  check-skills-sync.sh  sync-skills.sh
skills/agent-builder/: SKILL.md  message-bus.md  model.md
skills/ya-claw-deploy/: SKILL.md
tests/: test_bus.py  test_capabilities.py  test_context.py  test_image_compress.py  test_memory.py  test_presets.py  test_subagent_wrapper.py  test_utils.py
tests/agents/: test_compact.py  test_streamer.py
tests/environment/: test_composite.py  test_fork.py  test_local.py  test_sandbox.py  test_virtual_file_operator.py
tests/filters/: test_auto_load_files.py  test_background_shell.py  test_builders.py  test_bus_message.py  test_cold_start.py  test_environment_instructions.py  test_handoff.py  test_model_switch.py
tests/subagents/: test_factory.py  test_unified.py
tests/toolsets/: test_instruction.py  test_skills.py  test_subagent_isolation.py  test_tool_proxy.py  test_tool_search.py
tests/workspace/: test_strategies.py
ya_agent_sdk/: _config.py  events.py  presets.py  utils.py
ya_agent_sdk/agents/: compact.py  image_understanding.py  main.py
ya_agent_sdk/context/: __init__.py  agent.py  memory.py
ya_agent_sdk/environment/: __init__.py  composite.py  local.py  sandbox.py
ya_agent_sdk/filters/: __init__.py  auto_load_files.py  background_shell.py  bus_message.py  cold_start.py  handoff.py  image.py
ya_agent_sdk/subagents/: __init__.py  builder.py  config.py  factory.py
ya_agent_sdk/toolsets/: base.py
ya_agent_sdk/workspace/: base.py  (+2 more)
(+136 files in other folders)
