[project]
name = "ya-mono"
version = "0.0.0"
description = "Workspace root for the Yet Another Agents monorepo"
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/ya-agent-sdk", "packages/yaacli"]

[tool.uv.sources]
ya-agent-sdk = { workspace = true }

[tool.pyright]
include = ["packages/ya-agent-sdk/ya_agent_sdk", "packages/yaacli/yaacli"]
exclude = [
    "packages/ya-agent-sdk/tests",
    "packages/yaacli/tests",
    "packages/yaacli/yaacli/skills",
    "examples",
    "skills/examples",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".venv",
]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportTypedDictNotRequiredAccess = false

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
    "TRY003",
    "TRY300",
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"packages/yaacli/yaacli/*" = ["C901", "SIM108"]
"packages/yaacli/tests/*" = ["S101", "S603", "S607", "SIM117", "RUF059", "TRY400", "B904"]
"packages/ya-agent-sdk/tests/*" = ["S101", "S603", "S607", "SIM117", "RUF059", "TRY400", "B904"]
"packages/yaacli/yaacli/skills/**/*.py" = ["E402"]
"skills/examples/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904", "E402"]
"examples/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904", "E402"]

[tool.ruff.format]
preview = true

[tool.deptry]
ignore = ["DEP001", "DEP002"]
per_rule_ignores = { DEP001 = ["anthropic"], DEP002 = ["ya-agent-sdk"], DEP003 = ["anthropic", "yaacli", "botocore"], DEP004 = ["pytest"] }

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["packages/ya-agent-sdk/ya_agent_sdk", "packages/yaacli/yaacli"]
omit = [
    "packages/ya-agent-sdk/ya_agent_sdk/agents/*",
    "packages/ya-agent-sdk/ya_agent_sdk/toolsets/core/multimodal/*",
    "packages/ya-agent-sdk/ya_agent_sdk/toolsets/core/*/__init__.py",
]
